--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_spinkit: 5.1.0
   flutter_svg_provider: ^0.1.10
   sliding_up_panel: ^2.0.0+1
+  fluro: ^2.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
