--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.10.0
   cloud_firestore: ^3.1.0
+  flutter_styled_toast: ^2.0.0
+  flutter_slidable: ^1.1.0
 
 dev_dependencies:
   flutter_test:
