--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^3.1.0
   flutter_styled_toast: ^2.0.0
   flutter_slidable: ^1.1.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
